--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"></div>
 			</div>
 				<div class="banner-info">
-					<h1>I am a <span>Freelancer Designer</span></h1>
-					<p>Web Development - IOS Developer - Internet Marketer - Your Freelance</p>
-					<a class="learn" href="#">Learn More</a>
+					<h1>凌晨和王也的<span>故事</span></h1>
+					<h1><span>Story</span> of Chen Ling and Eric Wang</h1>
+					<p>To come...</p>
+					<a class="learn" href="#">Eric's Website</a>
 				</div>
 		</div>
 	</div>
