--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"></div>
 			</div>
 				<div class="banner-info">
-					<h1>凌晨和王也的<span>故事</span></h1>
-					<h1><span>Story</span> of Chen Ling and Eric Wang</h1>
+					<h1>晨和夜（也）的<span>故事</span></h1>
+					<h1>A <span>Story</span> of Chen and Eric (Ye)</h1>
 					<p>To come...</p>
 					<a class="learn" href="#">Eric's Website</a>
 				</div>
@@ -112,30 +112,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- header -->
 	<!-- branding -->
-	<div class="branding" id="home">
-		<div class="container">
-			<div class="col-md-3 mobi">
-				<i class="mobile"> </i>
-				<label> </label>
-				<h4>Web Design</h4>
-			</div>
-			<div class="col-md-3 devic">
-				<i class="device"> </i>
-				<label> </label>
-				<h4>Web Development</h4>
-			</div>
-			<div class="col-md-3 rock-1">
-				<i class="rocket"> </i>
-				<label> </label>
-				<h4>Internet Marketing</h4>
-			</div>
-			<div class="col-md-3 appl">
-				<i class="apple"> </i>
-				<h4>IOS Development</h4>
-			</div>
-				<div class="clearfix"></div>
-		</div>
-	</div>
 	<div class="b-design">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
