--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Freelance a Bootstarp  Website Template | Home :: w3layouts</title>
+<title>A Story of Chen and Eric</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -103,7 +103,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"></div>
 			</div>
 				<div class="banner-info">
-					<h1>晨和夜（也）的<span>故事</span></h1>
+					<h1>晨和夜(也)的<span>故事</span></h1>
 					<h1>A <span>Story</span> of Chen and Eric (Ye)</h1>
 					<p>To come...</p>
 					<a class="learn" href="#">Eric's Website</a>
@@ -115,8 +115,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
-					<h3>Branding Design</h3>
-					<p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat.</p>
+					<h3>初识</h3>
+					<h3>Chen Met Eric</h3>
+					<p>晨和夜初识于2002年，那时他们初中一年级。</p>
+					<p>Chen and Eric first met at year 2002, when they were both middle school first year students.</p>
 					<a class="more" href="#">Read More</a>
 				</div>
 				<div class="col-md-6 dsg-2">
@@ -129,10 +131,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- about-me -->
 	<div class="about-me" id="about">
 		<div class="container">
-			<h2>About<span>Me</span></h2>
+			<h2>关于<span>我们</span></h2>
+			<h2>About<span>Us</span></h2>
 			<i class="acent"></i>
-			<p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat v lutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat. adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequa.</p>
-			<p>Euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat.sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequa.</p>
+			<p>To come...</p>
 				<div class="col-md-6 medi">
 					<h5>Social Media Accounts</h5>
 				</div>
