--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<h3>初识</h3>
-					<h3>Chen Met Eric</h3>
+					<h3>First Met</h3>
 					<p>晨和夜初识于2002年，那时他们初中一年级。</p>
-					<p>Chen and Eric first met at year 2002, when they were both middle school first year students.</p>
+					<p>Chen and Eric first met at the first year of middle school, year 2002.</p>
 					<a class="more" href="#">Read More</a>
 				</div>
 				<div class="col-md-6 dsg-2">
@@ -135,28 +135,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h2>About<span>Us</span></h2>
 			<i class="acent"></i>
 			<p>To come...</p>
-				<div class="col-md-6 medi">
-					<h5>Social Media Accounts</h5>
-				</div>
-				<div class="col-md-6 soci">
-					<a href="#"><i class="social"></i></a>
 				</div>
 					<div class="clearfix"></div>
 		</div>			
-				<div class="location">
-					<div class="container">
-						<div class="col-md-6 igb">
-							<h6>LOCATION:<span>Igbalangao, Bugasong, Antique, PH, 5704</span></h6>
-						</div>
-						<div class="col-md-3 pon">
-							<h6>PHONE:<span>(123)456-7890<span></h6>
-						</div>
-						<div class="col-md-3">
-							<h6>EMAIL:<a href="#"> name@example.com</a></h6>
-						</div>
-							<div class="clearfix"></div>
-					</div>
-				</div>
 	</div>
 	<!-- about-me -->
 	<!-- portfolio-section -->
