--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-6 dsg-1">
 					<h3>初识</h3>
 					<h3>First Met</h3>
-					<p>晨和夜初识于2002年，那时他们初中一年级。</p>
-					<p>Chen and Eric first met at the first year of middle school, year 2002.</p>
+					<p>晨和夜初识于2002年，那时他们在念初中。</p>
+					<p>Chen and Eric first met at middle school, year 2002.</p>
 					<a class="more" href="#">Read More</a>
 				</div>
 				<div class="col-md-6 dsg-2">
@@ -299,34 +299,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							  </script>
 						<!-- FlexSlider -->
 	<!-- slider -->
-	</div>
-	<!-- contact -->
-	<div class="contact" id="contact-us">
-		<div class="container">
-		<h3><span>Contact</span>me</h3>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-			<div class="col-md-6">
-					<form>
-						<input type="text" class="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
-						<input type="text" class="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
-						<input type="text" class="text" value="Subject" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Subject';}">
-					</form>
-			</div>
-			<div class="col-md-6">
-					<form>
-						<textarea value="Message:" onfocus="if(this.value == 'Message') this.value='';" onblur="if(this.value == '') this.value='MESSAGE';">Message</textarea>
-					</form>
-			</div>
-				<div class="clearfix"></div>
-			<div class="button-1">
-						<a class="view" href="#">SUBMIT<i class="rock"></i></a>
-		</div>
-	</div>
-	<!-- contact -->
-	<div class="map">
-		<div class="container">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d403200.04170320276!2d145.07961605!3d-37.86028279999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne+VIC%2C+Australia!5e0!3m2!1sen!2sin!4v1417257392681" width="" height="" frameborder="0" style="border:0"></iframe>
-		</div>
 	</div>
 	<!-- footer -->
 	<div class="footer">
