--- a/index.html
+++ b/index.html
@@ -105,8 +105,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="banner-info">
 					<h1>晨和夜(也)的<span>故事</span></h1>
 					<h1>A <span>Story</span> of Chen and Eric (Ye)</h1>
-					<p>To come...</p>
-					<a class="learn" href="#">Eric's Website</a>
 				</div>
 		</div>
 	</div>
@@ -115,10 +113,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
-					<h3>初识</h3>
-					<h3>First Met</h3>
-					<p>晨和夜初识于2002年，那时他们在念初中。</p>
-					<p>Chen and Eric first met at middle school, year 2002.</p>
+					<h3><span>故事</span>的开头</h3>
+					<p>2002年：晨一直觉得初中是一段最美好的时光，因为少年不识愁滋味，还因为夜。</p>
+					<h3>The Beginning of the <span>Story</span></h3>
+					<p>Year 2002: Middle school was probably the happiest time in Chen's life, she had tasted only gladness, she had met Eric.</p>
 					<a class="more" href="#">Read More</a>
 				</div>
 				<div class="col-md-6 dsg-2">
