--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<h3><span>故事</span>的开头</h3>
-					<p>2002年：晨一直觉得初中是一段最美好的时光，因为少年不识愁滋味，还因为夜。</p>
+					<p>2002年：晨一直觉得初中是一段美好的时光，那时她第一次见到夜。</p>
 					<h3>The Beginning of the <span>Story</span></h3>
-					<p>Year 2002: Middle school was probably the happiest time in Chen's life, she had tasted only gladness, she had met Eric.</p>
+					<p>Year 2002: Middle school was a time when Chen had tasted only gladness, also when she first met Eric.</p>
 					<a class="more" href="#">Read More</a>
 				</div>
 				<div class="col-md-6 dsg-2">
@@ -129,10 +129,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- about-me -->
 	<div class="about-me" id="about">
 		<div class="container">
-			<h2>关于<span>我们</span></h2>
-			<h2>About<span>Us</span></h2>
+			<h2><span>故事</span>的中局</h2>
+			<p>2014年5月8日：是怎样的缘分呢？我们只知道，那天夜对晨说：“做我女朋友吧”</p>
+			<h2>The Middle of the <span>Story</span></h2>
+			<p>May 8th, 2014: Is it fate of love? All matters is that Eric said to Chen on that day, "Be my girlfriend"</p>
 			<i class="acent"></i>
-			<p>To come...</p>
 				</div>
 					<div class="clearfix"></div>
 		</div>			
