--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!-- header -->
-	<!-- branding -->
+	<!-- beginning -->
 	<div class="b-design">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
@@ -125,20 +125,42 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="clearfix"></div>
 		</div>
 	</div>
-	<!-- branding -->
-	<!-- about-me -->
+	<!-- beginning -->
+	<!-- middle -->
 	<div class="about-me" id="about">
 		<div class="container">
 			<h2><span>故事</span>的中局</h2>
 			<p>2014年5月8日：是怎样的缘分呢？我们只知道，那天夜对晨说：“做我女朋友吧”</p>
 			<h2>The Middle of the <span>Story</span></h2>
-			<p>May 8th, 2014: Is it fate of love? All matters is that Eric said to Chen on that day, "Be my girlfriend"</p>
+			<p>May 8th, year 2014: Is it fate of love? All matters is that Eric said to Chen on that day, "Be my girlfriend"</p>
 			<i class="acent"></i>
 				</div>
 					<div class="clearfix"></div>
 		</div>			
 	</div>
-	<!-- about-me -->
+	<!-- middle -->
+	<!-- climax -->
+	<div class="b-design">
+		<div class="container">
+			<h3><span>故事</span>的高潮</h3>
+			<p>2016年：To come...</p>
+			<h3>The Climax of the <span>Story</span></h3>
+			<p>Year 2016: To come...</p>
+			<a class="more" href="#">相册｜Album</a>
+				<div class="col-md-6 dsg-1">
+					<iframe width="420" height="315"
+					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=1">
+					</iframe>
+				</div>
+				<div class="col-md-6 dsg-2">
+					<iframe width="420" height="315"
+					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=1">
+					</iframe>
+				</div>
+					<div class="clearfix"></div>
+		</div>
+	</div>
+	<!-- beginning -->
 	<!-- portfolio-section -->
 	 <div class="portfolio"  id="portfolio">
 		<div class="container">
