--- a/index.html
+++ b/index.html
@@ -142,11 +142,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- climax -->
 	<div class="b-design">
 		<div class="container">
-			<h3><span>故事</span>的高潮</h3>
-			<p>2016年：To come...</p>
-			<h3>The Climax of the <span>Story</span></h3>
-			<p>Year 2016: To come...</p>
-			<a class="more" href="#">相册｜Album</a>
+			<div style="text-align: center">
+				<h3><span>故事</span>的高潮</h3>
+				<p>2016年：To come...</p>
+				<h3>The Climax of the <span>Story</span></h3>
+				<p>Year 2016: To come...</p>
+				<a class="more" href="#">相册｜Album</a>
+			</div>
+			
 				<div class="col-md-6 dsg-1">
 					<iframe width="420" height="315"
 					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=1">
