--- a/index.html
+++ b/index.html
@@ -149,15 +149,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<p>Year 2016: To come...</p>
 				<a class="more" href="#">相册｜Album</a>
 			</div>
-			
+		</div>
+		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<iframe width="420" height="315"
-					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=1">
+					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
 					</iframe>
 				</div>
 				<div class="col-md-6 dsg-2">
 					<iframe width="420" height="315"
-					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=1">
+					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
 					</iframe>
 				</div>
 					<div class="clearfix"></div>
