--- a/index.html
+++ b/index.html
@@ -142,22 +142,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- climax -->
 	<div class="b-design">
 		<div class="container">
-			<div style="text-align: center">
+			<div class="col-md-6 dsg-1">
 				<h3><span>故事</span>的高潮</h3>
 				<p>2016年：To come...</p>
 				<h3>The Climax of the <span>Story</span></h3>
 				<p>Year 2016: To come...</p>
 				<a class="more" href="#">相册｜Album</a>
 			</div>
+			<div class="col-md-6 dsg-2">
+				<img src="images/img1.png" class="img-responsive" alt="" />
+				</div>
+			<div class="clearfix"></div>
 		</div>
 		<div class="container">
 				<div class="col-md-6 dsg-1">
-					<iframe width="420" height="315"
+					<iframe width="500" height="400"
 					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
 					</iframe>
 				</div>
 				<div class="col-md-6 dsg-2">
-					<iframe width="420" height="315"
+					<iframe width="500" height="400"
 					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
 					</iframe>
 				</div>
