--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>			
 	</div>
 	<!-- middle -->
-	<!-- climax -->
+	<!-- climax 1-->
 	<div class="b-design">
 		<div class="container">
 			<div class="col-md-6 dsg-1">
@@ -154,6 +154,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			<div class="clearfix"></div>
 		</div>
+	</div>
+	<!-- climax 1-->
+	<!-- climax 2-->
+	<div class="b-design">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<iframe width="500" height="400"
@@ -168,13 +172,70 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="clearfix"></div>
 		</div>
 	</div>
+	<!-- climax 2-->
+	<!-- slider -->
+<div class="dan" id="services">
+<section class="slider">
+						<div class="flexslider">
+							<ul class="slides">
+								<li>
+									<div class="slider-info">
+										<img src="images/man.jpg"  alt="">
+										<h6>To come...</h6>
+										<p>To come...</p>
+									</div>
+								</li>
+								<li>
+									<div class="slider-info">
+										<img src="images/man.jpg"  alt="">
+										<h6>To come...</h6>
+										<p>To come...</p>
+									</div>
+								</li>
+								<li>	
+									<div class="slider-info">
+										<img src="images/man.jpg"  alt="">
+										<h6>To come...</h6>
+										<p>To come...</p>
+									</div>
+								</li>
+								<li>	
+									<div class="slider-info">
+										<img src="images/man.jpg"  alt="">
+										<h6>To come...</h6>
+										<p>To come...</p>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</section>
+				
+						<!-- FlexSlider -->
+							  <script defer src="js/jquery.flexslider.js"></script>
+							  <script type="text/javascript">
+								$(function(){
+								  SyntaxHighlighter.all();
+								});
+								$(window).load(function(){
+								  $('.flexslider').flexslider({
+									animation: "slide",
+									start: function(slider){
+									  $('body').removeClass('loading');
+									}
+								  });
+								});
+							  </script>
+						<!-- FlexSlider -->
+	<!-- slider -->
+	</div>
 	<!-- beginning -->
 	<!-- portfolio-section -->
 	 <div class="portfolio"  id="portfolio">
 		<div class="container">
-			<h2>Recent <span>Works</span></h2>
+			<h2>精选<span>相片</span></h2>
+			<h2>Selected <span>Photos</span></h2>
 			<i class="accent"></i>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+			<p>To come...</p>
 		</div>
 			<ul id="filters" class="clearfix">
 				<li><span class="filter active" data-filter="app card icon logos web">All</span></li>
@@ -274,61 +335,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					});	
 					</script>
 <!-- portfolio-section  -->
-<!-- slider -->
-<div class="dan" id="services">
-<section class="slider">
-						<div class="flexslider">
-							<ul class="slides">
-								<li>
-									<div class="slider-info">
-										<img src="images/man.jpg"  alt="">
-										<h6> Dan Cederholm</h6>
-										<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-									</div>
-								</li>
-								<li>
-									<div class="slider-info">
-										<img src="images/man.jpg"  alt="">
-										<h6> Dan Cederholm</h6>
-										<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-									</div>
-								</li>
-								<li>	
-									<div class="slider-info">
-										<img src="images/man.jpg"  alt="">
-										<h6> Dan Cederholm</h6>
-										<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-									</div>
-								</li>
-								<li>	
-									<div class="slider-info">
-										<img src="images/man.jpg"  alt="">
-										<h6> Dan Cederholm</h6>
-										<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-									</div>
-								</li>
-							</ul>
-						</div>
-					</section>
-				
-						<!-- FlexSlider -->
-							  <script defer src="js/jquery.flexslider.js"></script>
-							  <script type="text/javascript">
-								$(function(){
-								  SyntaxHighlighter.all();
-								});
-								$(window).load(function(){
-								  $('.flexslider').flexslider({
-									animation: "slide",
-									start: function(slider){
-									  $('body').removeClass('loading');
-									}
-								  });
-								});
-							  </script>
-						<!-- FlexSlider -->
-	<!-- slider -->
-	</div>
 	<!-- footer -->
 	<div class="footer">
 		<div class="container">
@@ -345,6 +351,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- footer -->
 	<div class="footer-bottom">
 		<div class="container">
+			<p><a href="http://ericyewang.github.io">Ye Wang (Eric)</a> © 2016.</p>
 			<p>Template by <a href="http://w3layouts.com" target="_blank"> w3layouts</a></p>
 		</div>
 	</div>	
