--- a/index.html
+++ b/index.html
@@ -160,14 +160,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
-					<iframe width="500" height="400"
-					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
+					<div class="video-container">
+						<iframe width="500" height="400" 
+						src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
 					</iframe>
+					</div>
 				</div>
 				<div class="col-md-6 dsg-2">
-					<iframe width="500" height="400"
-					src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
+					<div class="video-container">
+						<iframe width="500" height="400" 
+						src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
 					</iframe>
+					</div>
 				</div>
 					<div class="clearfix"></div>
 		</div>
