--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!-- climax 1-->
-	<!-- climax 2-->
-	<div class="b-design">
+	<!-- climax 2 -->
+	<div class="about-me" id="about">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<div class="video-container">
@@ -165,6 +165,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
 					</iframe>
 					</div>
+				</div>
+				<div class="col-md-6 dsg-2">
+					<h3>To come...</h3>
+					<p>To come...</p>
+				</div>
+					<div class="clearfix"></div>
+		</div>		
+	</div>
+	<!-- climax 2 -->
+	<!-- climax 3-->
+	<div class="b-design">
+		<div class="container">
+				<div class="col-md-6 dsg-2">
+					<h3>To come...</h3>
+					<p>To come...</p>
 				</div>
 				<div class="col-md-6 dsg-2">
 					<div class="video-container">
@@ -176,7 +191,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="clearfix"></div>
 		</div>
 	</div>
-	<!-- climax 2-->
+	<!-- climax 3-->
 	<!-- slider -->
 <div class="dan" id="services">
 <section class="slider">
