--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- beginning -->
 	<!-- middle -->
-	<div class="about-me" id="about">
+	<div class="about-me-a" id="about">
 		<div class="container">
 			<h2><span>故事</span>的中局</h2>
 			<p>2014年5月8日：是怎样的缘分呢？我们只知道，那天夜对晨说：“做我女朋友吧”</p>
@@ -157,7 +157,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- climax 1-->
 	<!-- climax 2 -->
-	<div class="about-me" id="about">
+	<div class="about-me-b" id="about">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<div class="video-container">
