--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="box_content">
 								   <div class="menu_box_list">
 									   <ul>
-										   <li class="active"><a href="#home" class="scroll">home</a></li>
-											<li><a href="#about" class="scroll">About us</a></li>
-											<li><a href="#services" class="scroll">Services</a></li>
-											<li><a href="#portfolio" class="scroll">portfolio</a></li>
-											<li><a href="#contact-us" class="scroll">contact </a></li>
+										   <li class="active"><a href="#begin" class="scroll">开头｜Begin</a></li>
+											<li><a href="#middle" class="scroll">中局｜Middle</a></li>
+											<li><a href="#climax" class="scroll">高潮｜Climax</a></li>
+											<li><a href="#photo" class="scroll">相片｜Photos</a></li>
 												<div class="clearfix"></div>
 										</ul>
 									</div>
@@ -105,12 +104,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="banner-info">
 					<h1>晨和夜(也)的<span>故事</span></h1>
 					<h1>A <span>Story</span> of Chen and Eric (Ye)</h1>
+					<a class="learn" href="#begin">向下拖动｜Scroll Down</a>
 				</div>
 		</div>
 	</div>
 	<!-- header -->
 	<!-- beginning -->
-	<div class="b-design">
+	<div class="b-design" id="begin">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<h3><span>故事</span>的开头</h3>
@@ -127,7 +127,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- beginning -->
 	<!-- middle -->
-	<div class="about-me-a" id="about">
+	<div class="about-me-a" id="middle">
 		<div class="container">
 			<h2><span>故事</span>的中局</h2>
 			<p>2014年5月8日：是怎样的缘分呢？我们只知道，那天夜对晨说：“做我女朋友吧”</p>
@@ -140,7 +140,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- middle -->
 	<!-- climax 1-->
 	<div class="b-design">
-		<div class="container">
+		<div class="container" id="climax">
 			<div class="col-md-6 dsg-1">
 				<h3><span>故事</span>的高潮</h3>
 				<p>2016年：To come...</p>
@@ -248,7 +248,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- beginning -->
 	<!-- portfolio-section -->
-	 <div class="portfolio"  id="portfolio">
+	 <div class="portfolio"  id="photos">
 		<div class="container">
 			<h2>精选<span>相片</span></h2>
 			<h2>Selected <span>Photos</span></h2>
