--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										   <li class="active"><a href="#begin" class="scroll">开头｜Begin</a></li>
 											<li><a href="#middle" class="scroll">中局｜Middle</a></li>
 											<li><a href="#climax" class="scroll">高潮｜Climax</a></li>
-											<li><a href="#photo" class="scroll">相片｜Photos</a></li>
+											<li><a href="#photos" class="scroll">相片｜Photos</a></li>
 												<div class="clearfix"></div>
 										</ul>
 									</div>
@@ -104,7 +104,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="banner-info">
 					<h1>晨和夜(也)的<span>故事</span></h1>
 					<h1>A <span>Story</span> of Chen and Eric (Ye)</h1>
-					<a class="learn" href="#begin">向下拖动｜Scroll Down</a>
+					<a class="scroll" href="#begin">向下拖动｜Scroll Down</a>
 				</div>
 		</div>
 	</div>
