--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										   <li class="active"><a href="#begin" class="scroll">开头｜Begin</a></li>
 											<li><a href="#middle" class="scroll">中局｜Middle</a></li>
 											<li><a href="#climax" class="scroll">高潮｜Climax</a></li>
-											<li><a href="#photos" class="scroll">相片｜Photos</a></li>
+											<li><a href="#portfolio" class="scroll">相片｜Photos</a></li>
 												<div class="clearfix"></div>
 										</ul>
 									</div>
@@ -245,7 +245,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- beginning -->
 	<!-- portfolio-section -->
-	 <div class="portfolio"  id="photos">
+	 <div class="portfolio"  id="portfolio">
 		<div class="container">
 			<h2>精选<span>相片</span></h2>
 			<h2>Selected <span>Photos</span></h2>
