--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<p><a href="http://ericyewang.github.io">Ye Wang (Eric)</a> © 2016.</p>
 			<p>Template by <a href="http://w3layouts.com" target="_blank"> w3layouts</a></p>
 			<!-- Counter Code START -->
-			<a href="http://www.e-zeeinternet.com/" target="_blank"><img src="http://www.e-zeeinternet.com/count.php?page=1135338&style=hearts&nbdigits=9&reloads=1" alt="Free Counter" border="0" ></a><br><a href="http://www.e-zeeinternet.com/" title="Free Counter" target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; font-size: 10px; color: #000000; text-decoration: none;">Free Counter</a>
+			<img src="http://www.e-zeeinternet.com/count.php?page=1135338&style=hearts&nbdigits=9&reloads=1" border="0" >
 			<!-- Counter Code END -->
 		</div>
 	</div>	
