--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<p><a href="http://ericyewang.github.io">Ye Wang (Eric)</a> © 2016.</p>
 			<p>Template by <a href="http://w3layouts.com" target="_blank"> w3layouts</a></p>
 			<!-- Counter Code START -->
-			<img src="http://www.e-zeeinternet.com/count.php?page=1135338&style=hearts&nbdigits=9&reloads=1" border="0" >
+			<img src="http://www.e-zeeinternet.com/count.php?page=1135339&style=hearts&nbdigits=6" border="0" >
 			<!-- Counter Code END -->
 		</div>
 	</div>	
