--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"></div>
 			</div>
 				<div class="banner-info">
-					<h1>晨和夜(也)的<span>故事</span></h1>
+					<h1>求婚大作战<span></span></h1>
 					<h1>A <span>Story</span> of Chen and Eric (Ye)</h1>
 					<div class = "learn"><a class="scroll" href="#begin">向下拖动｜Scroll Down</a></div>
 				</div>
