--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 				<div class="banner-info">
 					<h1>求婚大作战<span></span></h1>
-					<h1>The <span>Proposal</span> of a life time </h1>
-					<div class = "learn"><a class="scroll" href="#begin">向下拖动｜Scroll Down</a></div>
+					<h1>The <span>Proposal</span> of a Lifetime </h1>
+					<div class = "learn"><a class="scroll" href="#begin">下滑鼠标君👇｜Scroll Down</a></div>
 				</div>
 		</div>
 	</div>
