--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<h3>关于<span>我们</span>💘</h3>
-					<p>认识<span>14</span>年</br>
+					<p>认识<b>14</b>年</br>
 					从<b>高冷</b>妹子到<b>逗比</b>马冬梅</br>
 					从<b>搞笑</b>小王几到<b>正经</b>phd</br>
 					我们相爱相掐 互敬互黑</p>
 					<h3></h3> <span></span></h3>
 					<p>幸运不曾缺席彼此成长，庆幸未辜负年少时光。</p>
-					<a class="more" href="#">Read More</a>
+		
 				</div>
 				<div class="col-md-6 dsg-2">
 					<img src="images/img1.png" class="img-responsive" alt="" />
@@ -130,8 +130,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="about-me-a" id="middle">
 		<div class="container">
 			<h2><span>在路上✈️</span></h2>
-			<p>世界上最熟悉的机场就是jfk和rdu，飞来飞去的日子里累积了许多里程、美景，还有</br>
-			一直吵闹笑不停越来越合拍的默契感😃。</p>
+			<p>世界上最熟悉的机场就是jfk和rdu</br>
+			飞来飞去的日子里累积了许多里程、美景</br>
+			还有一直吵闹笑不停越来越合拍的默契感😃。</p>
 			<h2> <span></span></h2>
 			<p>在路上有一个又一个的惊喜，寻访到好吃的店，遇到有趣的人，去没信号的州界森林，去silent hill一样的高山苔原。</br></p>
 				</div>
