--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h3>关于<span>我们</span>💘</h3>
 					<p>认识<b>14</b>年</br>
 					从<b>高冷</b>妹子到<b>逗比</b>马冬梅</br>
-					从<b>搞笑</b>小王几到<b>正经</b>phd</br>
+					从<b>搞笑</b>少年到<b>正经</b>phd</br>
 					我们相爱相掐 互敬互黑</p>
 					<h3></h3> <span></span></h3>
 					<p>幸运不曾缺席彼此成长，庆幸未辜负年少时光。</p>
