--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="box_content">
 								   <div class="menu_box_list">
 									   <ul>
-										   <li class="active"><a href="#begin" class="scroll">开头｜Begin</a></li>
-											<li><a href="#middle" class="scroll">中局｜Middle</a></li>
-											<li><a href="#climax" class="scroll">高潮｜Climax</a></li>
-											<li><a href="#portfolio" class="scroll">相片｜Photos</a></li>
+										   <li class="active"><a href="#begin" class="scroll">关于我们</a></li>
+											<li><a href="#middle" class="scroll">前期策划</a></li>
+											<li><a href="#climax" class="scroll">求婚现场</a></li>
+											<li><a href="#portfolio" class="scroll">相片</a></li>
 												<div class="clearfix"></div>
 										</ul>
 									</div>
@@ -99,7 +99,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"></div>
 			</div>
 				<div class="banner-info">
-					<h1>求婚💍大作战<span></span></h1>
+					<h1><span>求婚<\span>💍大作战</h1>
 					<h1>👞The <span>Proposal</span> of a Lifetime 👠</h1>
 					<div class = "learn"><a class="scroll" href="#begin">下滑鼠标君👇｜Scroll Down </a></div>
 				</div>
@@ -114,8 +114,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p>认识<b>14</b>年</br>
 					从<b>高冷</b>妹子到<b>逗比</b>马冬梅</br>
 					从<b>搞笑</b>少年到<b>正经</b>phd</br>
-					我们相爱相掐 互敬互黑</p>
-					<h3></h3> <span></span></h3>
 					<p>幸运不曾缺席彼此成长，庆幸未辜负年少时光。</p>
 		
 				</div>
@@ -129,12 +127,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- middle -->
 	<div class="about-me-a" id="middle">
 		<div class="container">
-			<h2><span>在路上✈️</span></h2>
-			<p>世界上最熟悉的机场就是jfk和rdu</br>
-			飞来飞去的日子里累积了许多里程、美景</br>
-			还有一直吵闹笑不停越来越合拍的默契感😃。</p>
-			<h2> <span></span></h2>
-			<p>在路上有一个又一个的惊喜，寻访到好吃的店，遇到有趣的人，去没信号的州界森林，去silent hill一样的高山苔原。</br></p>
+			<h2>前期策划</h2>
+			<p>也找到了他大学时代和研究生时代的好哥们帮忙，制作了一个前十分钟伪装成电影的求婚视频。</p>
 				</div>
 					<div class="clearfix"></div>
 		</div>			
@@ -162,8 +156,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<div class="video-container">
-						<iframe width="500" height="400" 
-						src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
+						<embed src="http://player.youku.com/player.php/sid/XMTQ3MTM0ODAzMg==/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
 					</iframe>
 					</div>
 				</div>
