--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-6 dsg-2">
 					<div class="video-container">
 						<iframe width="500" height="400" 
-						src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=0">
+						src="http://player.youku.com/player.php/sid/XMTQ3MTM0ODAzMg==/v.swf" allowFullScreen="true" quality="high" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash">
 					</iframe>
 					</div>
 				</div>
