--- a/index.html
+++ b/index.html
@@ -177,9 +177,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-6 dsg-2">
 					<div class="video-container">
-						<iframe width="500" height="400" 
-						src="http://player.youku.com/player.php/sid/XMTQ3MTM0ODAzMg==/v.swf" allowFullScreen="true" quality="high" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash">
-					</iframe>
+					<video id="youku-html5-player-video" width="100%" height="100%" x-webkit-airplay="allow" controls="" autoplay="" preload="" src="/player/getM3U8/vid/91861269/type/flv/ts/1332059778/v.m3u8">
+				        </video>
 					</div>
 				</div>
 					<div class="clearfix"></div>
