--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<div class="video-container">
-						<embed src="http://player.youku.com/player.php/sid/XMTQ3MTM0ODAzMg==/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+					<iframe height=498 width=510 src="http://player.youku.com/embed/XMTQ3MTM0ODAzMg==" frameborder=0 allowfullscreen>
 					</iframe>
 					</div>
 				</div>
@@ -177,8 +177,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-6 dsg-2">
 					<div class="video-container">
-					<video id="youku-html5-player-video" width="100%" height="100%" x-webkit-airplay="allow" controls="" autoplay="" preload="" src="/player/getM3U8/vid/91861269/type/flv/ts/1332059778/v.m3u8">
-				        </video>
+					<iframe height=498 width=510 src="http://player.youku.com/embed/XMTQ3MTM0ODAzMg==" frameborder=0 allowfullscreen>
+					</iframe>
 					</div>
 				</div>
 					<div class="clearfix"></div>
