--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="banner-info">
 					<h1><span>求婚</span>大作战</h1>
 					<h1>The <span>Proposal</span> of a Lifetime</h1>
-					<div class = "learn"><a class="scroll" href="#begin">下滑鼠标君👇｜Scroll Down </a></div>
+					<div class = "learn"><a class="scroll" href="#begin">下滑鼠标｜Scroll Down </a></div>
 				</div>
 		</div>
 	</div>
@@ -132,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<p>大学和研究生的好哥们开始为求婚短片录制视频。</p>
 			<p>同时杜克大学的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</p>
 			<h3><span>特别鸣谢</span></h3>
-                              <p><span>视频制作</span>：胖子，龙龙，夹子哥，JKnash，ZRY，XP，方少，廖哥，ji长，小宇，Daniel，杨过大侠。</p>
+                              <p><span>视频制作</span>：胖子，龙龙，夹子哥，JKnash，ZRY，XP，方少，廖哥，ji长，小宇，Daniel，杨过大侠，高大。</p>
                               <p><span>策划&群演</span>：廖哥，砰砰砰砰砰砰砰，asy，xi姐，鹭，萌羊，tongrong，生蚝，Lan，香芋。</p>
 				</div>
 					<div class="clearfix"></div>
