--- a/index.html
+++ b/index.html
@@ -143,21 +143,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design">
 		<div class="container" id="climax">
 			<div class="col-md-6 dsg-1">
-				<h3><span>求婚</span>大作战</h3>
+				<h3>2016年2月13日 <span>求婚</span>当天</h3>
 				<p>经过紧张的秘密筹备，终于到了这一天...</p>
-				<h3><span></span></h3>
-				<p></p>
-				<a class="more" href="#">相册｜Album</a>
+				<div class = "learn"><a class="scroll" href="#video">求婚短片</a></div>
 			</div>
 			<div class="col-md-6 dsg-2">
-				<img src="images/img1.png" class="img-responsive" alt="" />
+				<img src="images/img2.png" class="img-responsive" alt="" />
 				</div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
 	<!-- climax 1-->
 	<!-- climax 2 -->
-	<div class="about-me-b" id="about">
+	<div class="about-me-b" id="video">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
 					<div class="video-container">
