--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container" id="climax">
 			<div class="col-md-6 dsg-1">
 				<h3>2016年2月13日 <span>求婚</span>当天</h3>
-				<p>经过紧张的秘密筹备，终于到了这一天...</p>
+				<p>在朋友们的高超演技中</p>
 				<div class = "learn"><a class="scroll" href="#video">求婚短片</a></div>
 			</div>
 			<div class="col-md-6 dsg-2">
