--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>				
 					<div class="portfolio app mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="app" style="display: inline-block; opacity: 1;">
 						<div class="portfolio-wrapper grid_box">		
-							 <a href="images/bc2.jpg" class="swipebox"  title="NC"> <img src="images/bc2.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
+							 <a href="images/bc2.jpg" class="swipebox"  title="Long Island, New York"> <img src="images/bc2.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
 		                </div>
 					</div>					
 					<div class="portfolio icon mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="icon" style="display: inline-block; opacity: 1;">
 						<div class="portfolio-wrapper grid_box">		
-							 <a href="images/brand.jpg" class="swipebox"  title="Florida"> <img src="images/brand.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
+							 <a href="images/brand.jpg" class="swipebox"  title="Orlando, Florida"> <img src="images/brand.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
 		                </div>
 					</div>
 					<div class="portfolio app mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="app" style="display: inline-block; opacity: 1;">
