--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design">
 		<div class="container" id="climax">
 			<div class="col-md-6 dsg-1">
-				<h3>2016年2月13日 <span>求婚</span>当天</h3>
-				<p>在朋友们的高超演技中</p>
+				<h3>2016年2月13日 <span>求婚</span></h3>
+				<p>在朋友们的配合下，剧本上演...</p>
+				<p>She said <span>"Yes"</span>!</p>
 				<div class = "learn"><a class="scroll" href="#video">求婚短片</a></div>
 			</div>
 			<div class="col-md-6 dsg-2">
