--- a/index.html
+++ b/index.html
@@ -128,12 +128,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="about-me-a" id="middle">
 		<div class="container">
 			<h2>前期策划</h2>
-			<p>2016年1月的最后一周，开始筹划求婚并设定了剧本初稿。</p>
-			<p>大学和研究生的好哥们开始为求婚短片录制视频。</p>
-			<p>同时杜克大学的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</p>
-			<h3><span>特别鸣谢</span></h3>
-                              <p><span>视频制作</span>：胖子，龙龙，夹子哥，JKnash，ZRY，XP，方少，廖哥，ji长，小宇，Daniel，杨过大侠，高大。</p>
-                              <p><span>策划&群演</span>：廖哥，砰砰砰砰砰砰砰，asy，xi姐，鹭，萌羊，tongrong，生蚝，Lan，香芋。</p>
+			<h3>2016年1月的最后一周，开始筹划求婚并设定了剧本初稿。</h3>
+			<h3>大学和研究生的好哥们开始为求婚短片录制视频。</h3>
+			<h3>同时杜克大学的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</h3>
 				</div>
 					<div class="clearfix"></div>
 		</div>			
@@ -164,8 +161,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 				<div class="col-md-6 dsg-2">
-					<h3>To come...</h3>
-					<p>To come...</p>
+					<h3>伪装成《盗梦空间》的求婚短片</h3>
+					<p><span>视频制作</span></p>
+					<p>胖子，龙龙，夹子哥，JKnash，ZRY，XP，方少，</p>
+					<p>廖哥，ji长，小宇，Daniel，杨过大侠，高大。</p>
 				</div>
 					<div class="clearfix"></div>
 		</div>		
@@ -175,8 +174,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design">
 		<div class="container">
 				<div class="col-md-6 dsg-2">
-					<h3>To come...</h3>
-					<p>To come...</p>
+					<h3>伪装成“狼人杀＋看电影”聚会的求婚现场</h3>
+					<p><span>策划&群演</span></p>
+					<p>廖哥，砰砰砰砰砰砰砰，asy，xi姐，鹭，</p>
+					<p>萌羊，tongrong，生蚝，Lan，香芋。</p>
 				</div>
 				<div class="col-md-6 dsg-2">
 					<div class="video-container">
