--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- middle -->
 	<div class="about-me-a" id="middle">
 		<div class="container">
-			<h2>前期策划</h2>
-			<h3>2016年1月的最后一周，开始筹划求婚并设定了剧本初稿。</h3>
-			<h3>大学和研究生的好哥们开始为求婚短片录制视频。</h3>
-			<h3>同时杜克大学的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</h3>
+			<h2>前期<span>策划</span></h2>
+			<h2>2016年1月的最后一周，开始筹划求婚并设定了剧本初稿。</h2>
+			<h2>大学和研究生的好哥们开始为求婚短片录制视频。</h2>
+			<h2>同时杜克大学的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</h2>
 				</div>
 					<div class="clearfix"></div>
 		</div>			
@@ -161,7 +161,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 				<div class="col-md-6 dsg-2">
-					<h3>伪装成《盗梦空间》的求婚短片</h3>
+					<h2>伪装成《盗梦空间》的求婚短片</h2>
 					<p><span>视频制作</span></p>
 					<p>胖子，龙龙，夹子哥，JKnash，ZRY，XP，方少，</p>
 					<p>廖哥，ji长，小宇，Daniel，杨过大侠，高大。</p>
