--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design">
 		<div class="container">
 				<div class="col-md-6 dsg-2">
-					<h3>伪装成“狼人杀＋看电影”聚会的求婚现场</h3>
+					<h3>伪装成“桌游电影”派对的求婚现场</h3>
 					<p><span>策划&群演</span></p>
 					<p>廖哥，砰砰砰砰砰砰砰，asy，xi姐，鹭，</p>
 					<p>萌羊，tongrong，生蚝，Lan，香芋。</p>
