--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<h2>前期<span>策划</span></h2>
 			<h2>2016年1月的最后一周，开始筹划求婚并设定了剧本初稿。</h2>
-			<h2><a href="http://en.hit.edu.cn">大学</a>和<a href="https://duke.edu">研究生</a>的好哥们开始为求婚短片录制视频。</h2>
-			<h2>同时<a href="https://duke.edu">杜克大学</a>的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</h2>
+			<h2>大学和研究生的好哥们开始为求婚短片录制视频。</h2>
+			<h2>同时杜克大学的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</h2>
 				</div>
 					<div class="clearfix"></div>
 		</div>			
