--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="portfolio app mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="app" style="display: inline-block; opacity: 1;">
 						<div class="portfolio-wrapper grid_box">		
-							 <a href="images/pho.jpg" class="swipebox"> <img src="images/pho.jpg" alt=""><span></span> </a>
+							 <a href="images/pho.jpg" class="swipebox"> <span></span> </a>
 		                </div>
 					</div>			
 					<div class="portfolio card mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="card" style="display: inline-block; opacity: 1;">
