--- a/index.html
+++ b/index.html
@@ -206,30 +206,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 					<div class="portfolio card mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="card" style="display: inline-block; opacity: 1;">
 						<div class="portfolio-wrapper grid_box">		
-							 <a href="images/sign.jpg" class="swipebox"  title="Image Title"> <img src="images/sign.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
+							 <a href="images/sign.jpg" class="swipebox"  title="Orlando, Florida"> <img src="images/sign.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
 		                </div>
 					</div>	
 					<div class="portfolio card mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="card" style="display: inline-block; opacity: 1;">
 						<div class="portfolio-wrapper grid_box">		
-							 <a href="images/bcard.jpg" class="swipebox"  title="Image Title"> <img src="images/bcard.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
+							 <a href="images/bcard.jpg" class="swipebox"  title="Long Island, New York"> <img src="images/bcard.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
 		                </div>
 					</div>	
 					<div class="portfolio icon mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="icon" style="display: inline-block; opacity: 1;">
 						<div class="portfolio-wrapper grid_box">		
-							 <a href="images/pp.jpg" class="swipebox"  title="Image Title"> <img src="images/pp.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
+							 <a href="images/pp.jpg" class="swipebox"  title="Durham, North Carolina"> <img src="images/pp.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
 		                </div>
 						</div>
+		
+					<div class="portfolio logos mix_all wow bounceIn" data-wow-delay="0.4s" data-cat="logos" style="display: inline-block; opacity: 1;">
+						<div class="portfolio-wrapper grid_box">		
+							 <a href="images/diamond.jpg" class="swipebox"  title="Orlando, Florida"> <img src="images/diamond.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
+		                </div>
+					</div>
+					
 					<div class="portfolio icon mix_all  wow bounceIn" data-wow-delay="0.4s" data-cat="icon" style="display: inline-block; opacity: 1;">
 						<div class="portfolio-wrapper grid_box">		
 							 <a href="images/brand.jpg" class="swipebox"  title="Orlando, Florida"> <img src="images/brand.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
 		                </div>
 					</div>
-		
-						<div class="portfolio logos mix_all wow bounceIn" data-wow-delay="0.4s" data-cat="logos" style="display: inline-block; opacity: 1;">
-						<div class="portfolio-wrapper grid_box">		
-							 <a href="images/diamond.jpg" class="swipebox"  title="Image Title"> <img src="images/diamond.jpg" class="img-responsive" alt=""><span class="zoom-icon"></span> </a>
-		                </div>
-					</div>
+	
 					<div class="clearfix"></div>					
 				</div>
 					<div class="clearfix"></div>
