--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design" id="begin">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
-					<h3>关于<span>我们</span></h3>
-					<p>认识<b>14</b>年</br>
-					从<b>高冷</b>妹子到<b>逗比</b>马冬梅</br>
-					从<b>搞笑</b>少年到<b>正经</b>phd</br>
-					<p>幸运不曾缺席彼此成长，庆幸未辜负年少时光。</p>
+					<h3><span>我们</span></h3>
+					<h4>认识<span>14</span>年</h4>
+					<h4>从<b>高冷</b>妹子到<b>逗比</b>马冬梅</h4>
+					<h4>从<b>搞笑</b>少年到<b>正经</b>phd</h4>
+					<h3>幸运不曾缺席彼此成长，庆幸未辜负年少时光。</h3>
 		
 				</div>
 				<div class="col-md-6 dsg-2">
