--- a/index.html
+++ b/index.html
@@ -110,12 +110,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="b-design" id="begin">
 		<div class="container">
 				<div class="col-md-6 dsg-1">
-					<h2><span>我们</span></h2>
-					<h3>认识<span>14</span>年</h3>
-					<h3>从<b>高冷</b>妹子到<b>逗比</b>马冬梅</h3>
-					<h3>从<b>搞笑</b>少年到<b>正经</b>phd</h3>
-					<h2>幸运不曾缺席彼此成长</h2>
-					<h2>庆幸未辜负年少时光。</h2>
+					<h3><span>我们</span>认识<span>14</span>年</h3>
+					<h3>从高冷妹子到逗比"马冬梅"</h3>
+					<h3>从搞笑少年到正经PhD</h3>
+					<h3><span>幸运不曾缺席彼此成长</span></h3>
+					<h3><span>庆幸未辜负年少时光</span></h3>
 		
 				</div>
 				<div class="col-md-6 dsg-2">
@@ -128,7 +127,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- middle -->
 	<div class="about-me-a" id="middle">
 		<div class="container">
-			<h2>前期<span>策划</span></h2>
+			<h>前期<span>策划</span></h2>
 			<h2>2016年1月的最后一周，开始筹划求婚并设定了剧本初稿。</h2>
 			<h2>大学和研究生的好哥们开始为求婚短片录制视频。</h2>
 			<h2>同时杜克大学的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</h2>
@@ -166,6 +165,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p><span>视频录制</span></p>
 					<p>胖子，龙龙，夹子哥，JKnash，ZRY，XP，方少，</p>
 					<p>廖哥，ji长，小宇，Daniel，杨过大侠，高大。</p>
+					<p>视频密码请关注也(Eric)最新脸书&微博&Qzone&朋友圈的动态</p>
 				</div>
 					<div class="clearfix"></div>
 		</div>		
@@ -179,6 +179,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p><span>策划&群演</span></p>
 					<p>廖哥，砰砰砰砰砰砰砰，asy，xi姐，鹭，</p>
 					<p>萌羊，tongrong，生蚝，Lan，香芋。</p>
+					<p>视频密码请关注也(Eric)最新脸书&微博&Qzone&朋友圈的动态</p>
 				</div>
 				<div class="col-md-6 dsg-2">
 					<div class="video-container">
