--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- middle -->
 	<div class="about-me-a" id="middle">
 		<div class="container">
-			<h>前期<span>策划</span></h2>
+			<h2>前期<span>策划</span></h2>
 			<h2>2016年1月的最后一周，开始筹划求婚并设定了剧本初稿。</h2>
 			<h2>大学和研究生的好哥们开始为求婚短片录制视频。</h2>
 			<h2>同时杜克大学的朋友们为求婚剧本提供了宝贵的意见，并担任群演。</h2>
