--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p><span>视频录制</span></p>
 					<p>胖子，龙龙，夹子哥，JKnash，ZRY，XP，方少，</p>
 					<p>廖哥，ji长，小宇，Daniel，杨过大侠，高大。</p>
-					<p>视频密码请关注也(Eric)最新脸书&微博&Qzone&朋友圈的动态</p>
+					<p>视频密码请见也(Eric)最新朋友圈动态</p>
 				</div>
 					<div class="clearfix"></div>
 		</div>		
