--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p><span>策划&群演</span></p>
 					<p>廖哥，砰砰砰砰砰砰砰，asy，xi姐，鹭，</p>
 					<p>萌羊，tongrong，生蚝，Lan，香芋。</p>
-					<p>视频密码请关注也(Eric)最新脸书&微博&Qzone&朋友圈的动态</p>
+					<p>视频密码请见也(Eric)最新朋友圈动态</p>
 				</div>
 				<div class="col-md-6 dsg-2">
 					<div class="video-container">
